@@ -2,7 +2,7 @@ Package: patientProfilesVis
 Type: Package
 Title: Visualization of patient profiles
 Version: 0.0.9
-Date: 2018-09-12
+Date: 2018-09-13
 Author: Laure Cougnaud
 Maintainer: Laure Cougnaud <laure.cougnaud@openanalytics.eu>
 Description: This package enables the creation of report with customizable visualization of patient profiles.
